move v1beta1 vo v1

--- a/astronomer-chart/astronomer/templates/psp/restrictive-psp.yaml
+++ b/astronomer-chart/astronomer/templates/psp/restrictive-psp.yaml
@@ -1,7 +1,7 @@
 {{- if .Values.global.pspEnabled }}
 # All purpose catch all restrictive policy
 # If a specific policy is not applied this one will be
-apiVersion: policy/v1beta1
+apiVersion: policy/v1
 kind: PodSecurityPolicy
 metadata:
   name: {{ .Release.Name }}-restrictive
