--- a/astronomer-chart/astronomer/charts/prometheus-node-exporter/templates/psp.yaml
+++ b/astronomer-chart/astronomer/charts/prometheus-node-exporter/templates/psp.yaml
@@ -1,6 +1,6 @@
 {{- if .Values.rbac.create }}
 {{- if .Values.global.pspEnabled }}
-apiVersion: policy/v1beta1
+apiVersion: policy/v1
 kind: PodSecurityPolicy
 metadata:
   name: {{ template "prometheus-node-exporter.fullname" . }}
