--- a/astronomer-chart/astronomer/charts/fluentd/templates/fluentd-psp.yaml
+++ b/astronomer-chart/astronomer/charts/fluentd/templates/fluentd-psp.yaml
@@ -2,7 +2,7 @@
 ################################
 ## Fluentd PSP
 #################################
-apiVersion: policy/v1
+apiVersion: policy/v1beta1
 kind: PodSecurityPolicy
 metadata:
   name: {{ .Release.Name }}-fluentd
