--- a/astronomer-chart/astronomer/charts/prometheus-postgres-exporter/templates/podsecuritypolicy.yaml
+++ b/astronomer-chart/astronomer/charts/prometheus-postgres-exporter/templates/podsecuritypolicy.yaml
@@ -1,5 +1,5 @@
 {{- if .Values.global.pspEnabled }}
-apiVersion: policy/v1
+apiVersion: policy/v1beta1
 kind: PodSecurityPolicy
 metadata:
   name: {{ template "prometheus-postgres-exporter.fullname" . }}
