--- a/astronomer-chart/astronomer/templates/psp/permissive-psp.yaml
+++ b/astronomer-chart/astronomer/templates/psp/permissive-psp.yaml
@@ -1,5 +1,5 @@
 {{- if .Values.global.pspEnabled }}
-apiVersion: policy/v1
+apiVersion: policy/v1beta1
 kind: PodSecurityPolicy
 metadata:
   name: {{ .Release.Name }}-permissive
